[package]
name = "city-flag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91f6288" }
features = ["json"]
